--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: "3.3"
+version: '3.3'
 services:
   mongo:
     image: mongo
@@ -10,9 +10,50 @@ services:
     volumes:
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
       - mongo_volume:/data/db
+  student_svc:
+    image: student_svc
+    container_name: student_svc
+    environment:
+      ENV FLASK_APP: app.py
+      ENV FLASK_RUN_HOST: 0.0.0.0
+      MONGO_SERVER_HOST: mongo
+      MONGO_SERVER_PORT: 27017
+      MONGO_USERNAME: comp3122
+      MONGO_PASSWORD: 12345
+    build:
+      context: ./student_service
+    depends_on:
+      - mongo
+    ports:
+      - 15000:15000
+    restart: on-failure
+
+  # the Prometheus server
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - 9090:9090
+
+  # Grafana for visualization
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    volumes:
+      - ./grafana/config.ini:/etc/grafana/grafana.ini
+      - ./grafana/datasource.yaml:/etc/grafana/provisioning/datasources/default.yaml
+      - ./grafana/dashboard.yaml:/etc/grafana/provisioning/dashboards/default.yaml
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
+    ports:
+      - 3000:3000
+    depends_on:
+      - prometheus
+
 networks:
   default:
-    name: ass1
+    name: ass2
 volumes:
   mongo_volume:
     name: mongo_vol
